--- a/frontend_snippets/mochi_menu/mochi_menu.html
+++ b/frontend_snippets/mochi_menu/mochi_menu.html
@@ -13,9 +13,10 @@
     <div id="mochi_menu">
       <div id="blob-loader">
         <div class="menu-bar">
-          <div class="mochi position-1" v-on:click="menu_click(1)" v-bind:class="{'anime_drop':active_menu==1}"></div>
-          <div class="mochi position-2" v-on:click="menu_click(2)" v-bind:class="{'anime_drop':active_menu==2}"></div>
-          <div class="mochi position-3" v-on:click="menu_click(3)" v-bind:class="{'anime_drop':active_menu==3}"></div>
+          <div class="click-box position-1" v-on:click="menu_click(1)"></div>
+          <div class="click-box position-2" v-on:click="menu_click(2)"></div>
+          <div class="click-box position-3" v-on:click="menu_click(3)"></div>
+          <div class="mochi" v-bind:class="[position_class, {'anime_drop': click_flash}]"></div>
         </div>
       </div>
       <svg xmins="http://www.w3.org/2000/svg" version="1.1">
@@ -32,12 +33,53 @@
       const mochi_menu = new Vue({
           el: '#mochi_menu',
           data: {
-              active_menu: 0
+              mochi_num : 3,
+              active_menu: 1,
+              click_flash: false,
+              on_animation: false,
+              anime_reqired_time: 1000
+          },
+          created: function (n) {
+              console.log("created.");
           },
           methods: {
               menu_click: function (n) {
+                  this.start_click_flash();
+                  this.start_anime_timer();
                   this.active_menu = n;
-                  console.log(this.active_menu);
+                  console.log("active_menu",this.active_menu);
+              },
+              start_click_flash: function () {
+                  this.click_flash = false;
+                  setTimeout(
+                      ()=>{ this.click_flash = true;console.log("flash", this.click_flash); },
+                      10
+                  );
+                  
+              },
+              start_anime_timer: function () {
+                  this.on_animation = true;
+                  setTimeout(
+                      ()=>{ this.on_animation = false; },
+                      this.anime_reqired_time
+                  );
+                  console.log("");
+              }
+          },
+          computed: {
+              position_class: function() { //2020.11.15やっとできた。この7行に8時間ぐらいかかった。
+                  let array = [];
+                  for (let i=1; i<=this.mochi_num; i++ ){
+                      if(this.active_menu == i){
+                          array.push(`position-${i}`);
+                      }
+                  }
+                  return array;
+              }
+          },
+          watch: {
+              number: function(newValue) {
+              gsap.to(this.$data, { duration: 0.5, tweenedNumber: newValue });
               }
           }
       })
