--- a/frontend_snippets/mochi_menu/mochi_menu.html
+++ b/frontend_snippets/mochi_menu/mochi_menu.html
@@ -8,9 +8,11 @@
     <meta name="description">
     <meta name="keywords">
     <link rel="stylesheet" href="./layout.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   </head>
-  <body>
+  <body><i class="menu-icon far fa-bell"></i>
     <div id="mochi_menu">
+      <div v-for="item in menu_items">{{ item }}</div>
       <div id="blob-loader">
         <div class="menu-rect" v-bind:class="{'anime_swell': click_flash}"></div>
         <div class="menu-block">
@@ -35,6 +37,17 @@
           el: '#mochi_menu',
           data: {
               mochi_num : 3,
+              menu_items : {
+                  item1: {
+                      fa_icon: "fa-square"
+                  },
+                  item2: {
+                      fa_icon: "fa-bell"
+                  },
+                  item3: {    
+                      fa_icon: "fa-bookmark"
+                  }
+              },
               active_menu: 1,
               click_flash: false,
               on_animation: false,
