--- a/frontend_snippets/mochi_menu/mochi_menu.html
+++ b/frontend_snippets/mochi_menu/mochi_menu.html
@@ -12,13 +12,16 @@
   </head>
   <body>
     <div id="mochi_menu">
-      <div v-for="item in menu_items"><i class="menu-icon far" v-bind:class="item.classname"></i></div>
-      <div id="blob-loader">
+      <div class="menu-icon-layer menu-size-wrapper">
+        <div class="menu-block">
+          <div v-for="(item, index) in menu_items" style="position:relative;" v-bind:class="`position-${index+1}`">
+            <div class="click-box" v-on:click="menu_click(index+1)"></div><i class="menu-icon" v-bind:class="item.classname"></i>
+          </div>
+        </div>
+      </div>
+      <div class="menu-size-wrapper" id="blob-loader">
         <div class="menu-rect" v-bind:class="{'anime_swell': click_flash}"></div>
         <div class="menu-block">
-          <div v-for="(item, index) in menu_items">
-            <div class="click-box" v-bind:class="`position-${index+1}`" v-on:click="menu_click(index+1)"></div>
-          </div>
           <div class="mochi" v-bind:class="[position_class, {'anime_drop': click_flash}]"></div>
         </div>
       </div>
@@ -38,13 +41,13 @@
           data: {
               menu_items : [
                   {
-                      classname: {"fa-square": true}
+                      classname: {"fas fa-home": true}
                   },
                   {
-                      classname: {"fa-bell": true}
+                      classname: {"far fa-bell": true}
                   },
                   {    
-                      classname: {"fa-bookmark": true}
+                      classname: {"far fa-bookmark": true}
                   }
               ],
               active_menu: 1,
