--- a/frontend_snippets/mochi_menu/mochi_menu.html
+++ b/frontend_snippets/mochi_menu/mochi_menu.html
@@ -15,14 +15,14 @@
       <div class="menu-icon-layer menu-size-wrapper">
         <div class="menu-block">
           <div v-for="(item, index) in menu_items" style="position:relative;" v-bind:class="`position-${index+1}`">
-            <div class="click-box" v-on:click="menu_click(index+1)"></div><i class="menu-icon" v-bind:class="item.classname"></i>
+            <div class="click-box" v-on:click="menu_click(index+1)"></div><i class="menu-icon" v-bind:class="[item.classname, {'menu-icon-drop': active_menu==index+1}]"></i>
           </div>
         </div>
       </div>
       <div class="menu-size-wrapper" id="blob-loader">
         <div class="menu-rect" v-bind:class="{'anime_swell': click_flash}"></div>
         <div class="menu-block">
-          <div class="mochi" v-bind:class="[position_class, {'anime_drop': click_flash}]"></div>
+          <div class="mochi" v-bind:class="[position_class, mochi_vertical_class]"></div>
         </div>
       </div>
       <svg xmins="http://www.w3.org/2000/svg" version="1.1">
@@ -55,11 +55,8 @@
               on_animation: false,
               anime_reqired_time: 1000
           },
-          created: function (n) {
-              console.log("created.");
-          },
           methods: {
-              menu_click: function (n) {
+              menu_click(n) {
                   if(this.on_animation) {
                       return;
                   }
@@ -68,7 +65,7 @@
                   this.active_menu = n;
                   console.log("[active_menu] = ",this.active_menu);
               },
-              start_click_flash: function () {
+              start_click_flash() {
                   this.click_flash = false;
                   setTimeout(
                       ()=>{ this.click_flash = true;},
@@ -76,7 +73,7 @@
                   );
                   
               },
-              start_anime_timer: function () {
+              start_anime_timer() {
                   this.on_animation = true;
                   setTimeout(
                       ()=>{ 
@@ -89,13 +86,13 @@
               }
           },
           computed: {
-              position_class: function() {
-                  let array = [];
-                  for (let i=1; i<=this.menu_items.length; i++ ){
-                      if(this.active_menu == i){
-                          array.push(`position-${i}`);
-                      }
-                  }
+              position_class() {
+                  return `position-${this.active_menu}`;
+              },
+              mochi_vertical_class() {
+                  console.log("mochiV");
+                  let array = []
+                  if(this.click_flash) array.push('anime_drop');
                   return array;
               }
           },
