--- a/frontend_snippets/mochi_menu/mochi_menu.html
+++ b/frontend_snippets/mochi_menu/mochi_menu.html
@@ -12,19 +12,20 @@
   </head>
   <body>
     <div id="mochi_menu">
-      <div class="menu-icon-layer menu-size-wrapper">
-        <div class="menu-block">
+      <div class="menu-icon-layer-wrapper">
+        <div class="menu-block" id="menu-icon-layer">
           <div v-for="(item, index) in menu_items" style="position:relative;" v-bind:class="`position-${index+1}`">
             <div class="click-box" v-on:click="menu_click(index+1)" v-bind:class="{'click-box-drop': active_menu==index+1}"></div><i class="menu-icon" v-bind:class="[item.classname, {'menu-icon-drop': active_menu==index+1}]"></i>
           </div>
         </div>
-      </div>
-      <div class="menu-size-wrapper" id="blob-loader">
-        <div class="menu-rect" v-bind:class="rect_swell_class"></div>
-        <div class="menu-block">
-          <div class="mochi" v-bind:class="[position_class, mochi_vertical_class]"></div>
+        <div class="menu-size-wrapper" id="blob-loader">
+          <div class="menu-rect" v-bind:class="rect_swell_class"></div>
+          <div class="menu-block">
+            <div class="mochi" v-bind:class="[position_class, mochi_vertical_class]"></div>
+          </div>
         </div>
       </div>
+      <div id="content-wrapper"></div>
       <svg xmins="http://www.w3.org/2000/svg" version="1.1">
         <defs> 
           <filter id="blob">
