non-gravity bridge

--- a/phaser_multi/random-massive/massrand.html
+++ b/phaser_multi/random-massive/massrand.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <script src="massrand.js" type="text/javascript"></script>
+    <script src="matter-bridge.js" type="text/javascript"></script>
 
 </body>
 
