--- a/newsapi/newsapi.html
+++ b/newsapi/newsapi.html
@@ -12,6 +12,9 @@
 
     NewsAPI
 
+    <div id="information"></div>
+
+    <script src="./apikey-newsapi.js"></script> 
     <script src="./test-json.js"></script>
     <script src="./news-api.js"></script>
 </body>
