--- a/newsapi/newsapi.html
+++ b/newsapi/newsapi.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewsAPI</title>
+
+    <link rel="stylesheet" href="./newsapi.css">
 </head>
 
 <body>
@@ -13,6 +15,8 @@
     NewsAPI
 
     <div id="information"></div>
+
+    <div class="title">タイトル</div>
 
     <script src="./apikey-newsapi.js"></script> 
     <script src="./test-json.js"></script>
