--- a/newsapi/newsapi.html
+++ b/newsapi/newsapi.html
@@ -16,7 +16,7 @@
 
     <div id="information"></div>
 
-    <div class="title">タイトル</div>
+    <div class="title">タイトル題名</div>
 
     <script src="./apikey-newsapi.js"></script> 
     <script src="./test-json.js"></script>
