--- a/phaser_multi/stick/stick.html
+++ b/phaser_multi/stick/stick.html
@@ -8,6 +8,10 @@
     <style type="text/css">
         body {
             margin: 0;
+            background-color: black;
+        }
+        canvas {
+            border: 1px white solid;
         }
     </style>
 </head>
