three.js: screen width test

--- a/threejs/tree/index.html
+++ b/threejs/tree/index.html
@@ -27,7 +27,7 @@
                 <div class="centering-inner">
                     <div class="copywrite-main">
                         <span>緑を育てる</span><span>IT企業。</span>
-
+                        <div id="test-log">a</div>
                     </div>
                 </div>
 
