--- a/p5_simulation/index.html
+++ b/p5_simulation/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script src="drawer.js"></script>
     <script src="Trace.js"></script>
     <script src="Carrier.js"></script>
     <script src="Cargos.js"></script>
