p5: create collect area

--- a/p5_simulation/index.html
+++ b/p5_simulation/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <script src="drawer.js"></script>
+    <script src="collect-area.js"></script>
     <script src="Trace.js"></script>
     <script src="Carrier.js"></script>
     <script src="Cargos.js"></script>
