--- a/ship/index.html
+++ b/ship/index.html
@@ -10,25 +10,26 @@
 <body>
     <div id="particles"></div>
     <div class="page-wrap">
-        <div class="ship">
-            <svg width="145" height="88" viewBox="0 0 145 88" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M12.5 6.99999C14 7.83333 32.6127 21.0179 45.5 30C47.1667 31 50.5 32.3 50.5 29.5V25C50.5 23.4 49.1667 23 48.5 23H44.5C42.1 22.2 42.8333 20 43.5 19C49 13.6667 59.8675 2.63246 60.5 2C61.5 1 63 1 63.5 1H110C112 1 113.164 1.66425 114 2.5L130.5 19C132.1 20.6 131 22 130 22.5C128.735 23.1325 127.1 23 125.5 23C123.9 23 123.167 24.3333 123 25V33C123 35 125.787 34.4282 127.5 34C131.5 33 143.5 26.5 143.5 36C143.5 65 112.5 77.5 107.5 79C102.5 80.5 57.5 95 30.5 79C3.5 63 0.499996 36 1.5 25C2.5 14 5.49999 8.49999 7 6.99999C8.5 5.5 11 6.16666 12.5 6.99999Z"
-                    stroke="white" stroke-width="2" />
-                <path
-                    d="M64 26C64 24.8954 64.8954 24 66 24H70C71.1046 24 72 24.8954 72 26V30C72 31.1046 71.1046 32 70 32H66C64.8954 32 64 31.1046 64 30V26Z"
-                    stroke="white" stroke-width="2" />
-                <path
-                    d="M83 26C83 24.8954 83.8954 24 85 24H89C90.1046 24 91 24.8954 91 26V30C91 31.1046 90.1046 32 89 32H85C83.8954 32 83 31.1046 83 30V26Z"
-                    stroke="white" stroke-width="2" />
-                <path
-                    d="M102 26C102 24.8954 102.895 24 104 24H108C109.105 24 110 24.8954 110 26V30C110 31.1046 109.105 32 108 32H104C102.895 32 102 31.1046 102 30V26Z"
-                    stroke="white" stroke-width="2" />
-            </svg>
-        </div>
-        <div class="wave">
-            
+        <div class="overlay-screen">
+            <div class="logo"><span>ハコブネの冒険</span></div>
+            <div class="ship">
+                <svg width="145" height="88" viewBox="0 0 145 88" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12.5 6.99999C14 7.83333 32.6127 21.0179 45.5 30C47.1667 31 50.5 32.3 50.5 29.5V25C50.5 23.4 49.1667 23 48.5 23H44.5C42.1 22.2 42.8333 20 43.5 19C49 13.6667 59.8675 2.63246 60.5 2C61.5 1 63 1 63.5 1H110C112 1 113.164 1.66425 114 2.5L130.5 19C132.1 20.6 131 22 130 22.5C128.735 23.1325 127.1 23 125.5 23C123.9 23 123.167 24.3333 123 25V33C123 35 125.787 34.4282 127.5 34C131.5 33 143.5 26.5 143.5 36C143.5 65 112.5 77.5 107.5 79C102.5 80.5 57.5 95 30.5 79C3.5 63 0.499996 36 1.5 25C2.5 14 5.49999 8.49999 7 6.99999C8.5 5.5 11 6.16666 12.5 6.99999Z"
+                        stroke="white" stroke-width="2" />
+                    <path
+                        d="M64 26C64 24.8954 64.8954 24 66 24H70C71.1046 24 72 24.8954 72 26V30C72 31.1046 71.1046 32 70 32H66C64.8954 32 64 31.1046 64 30V26Z"
+                        stroke="white" stroke-width="2" />
+                    <path
+                        d="M83 26C83 24.8954 83.8954 24 85 24H89C90.1046 24 91 24.8954 91 26V30C91 31.1046 90.1046 32 89 32H85C83.8954 32 83 31.1046 83 30V26Z"
+                        stroke="white" stroke-width="2" />
+                    <path
+                        d="M102 26C102 24.8954 102.895 24 104 24H108C109.105 24 110 24.8954 110 26V30C110 31.1046 109.105 32 108 32H104C102.895 32 102 31.1046 102 30V26Z"
+                        stroke="white" stroke-width="2" />
+                </svg>
+            </div>
+            <div class="wave"><div><span></span></div></div>
         </div>
     </div>
 
@@ -36,29 +37,31 @@
     <script src="particles-setting.js"></script>
     <script>
         window.onload = function () {
-            let canvas = document.getElementById("particles").firstElementChild;;
+            let canvas = document.getElementById("particles").firstElementChild;
             let ctx = canvas.getContext("2d");
 
             function fitCanvasSize() {
                 // Canvas のサイズをクライアントサイズに合わせる
                 canvas.width = document.documentElement.clientWidth - 10;
                 canvas.height = document.documentElement.clientHeight - 10;
-
-                // Canvas 全体を塗りつぶし
-                ctx.fillStyle = "rgb(191, 255, 191)";
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-                // Canvas サイズに合わせて矩形を描画
-                let w = canvas.width / 2;
-                let h = canvas.height / 2;
-                ctx.fillStyle = "cyan";
-                ctx.fillRect(10, 10, w, h);
             }
 
             fitCanvasSize();
             window.onresize = fitCanvasSize;
         }
+
+        let waveEl = document.querySelector('.wave');
+        let animeCount = 0;
+        let animeArray = ["wave-anime-02 5s ease 0s"];
+
+        waveEl.addEventListener('animationend', function() {
+            if(animeArray[animeCount]!=undefined){
+                waveEl.style.animation = animeArray[animeCount];
+                animeCount++;
+            }
+        });
     </script>
 </body>
+
 
 </html>
