WIP: button center

--- a/cyber_ui/index.html
+++ b/cyber_ui/index.html
@@ -13,6 +13,9 @@
 <body class="background-pattern">
     <ul class="grid">
         <li>
+            <div>
+                <button class="button1">Button</button>
+            </div>
 
         </li>
         <li>
