dir-name-change : svg_animation

--- a/svg_animation/index.html
+++ b/svg_animation/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Document</title>
+    <title>SVGアニメーションしてみた</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
 </head>
@@ -11,7 +11,7 @@
     <div id="particles"></div>
     <div class="page-wrap">
         <div class="overlay-screen">
-            <div class="logo"><span>ハコブネの冒険</span></div>
+            <div class="logo"><span>Ship and Sea</span></div>
             <div class="ship">
                 <svg width="145" height="88" viewBox="0 0 145 88" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
