--- a/p5_202209/index.html
+++ b/p5_202209/index.html
@@ -11,9 +11,13 @@
 </head>
 
 <body>
+    <script src="Utl39.js"></script>
     <script src="Drawer.js"></script>
     <script src="Mover.js"></script>
+    <script src="Plant.js"></script>
     <script src="Main.js"></script>
+
+
 </body>
 
 </html>
