--- a/p5_202209/index.html
+++ b/p5_202209/index.html
@@ -8,16 +8,20 @@
     <script src="https://cdn.jsdelivr.net/gh/molleindustria/p5.play/lib/p5.play.js"></script>
     <meta charset="utf-8" />
 
+    <style>
+        * {
+            margin: 0;
+        }
+    </style>
 </head>
 
-<body>
+<body id="main-id">
+
     <script src="Utl39.js"></script>
     <script src="Drawer.js"></script>
     <script src="Mover.js"></script>
     <script src="Plant.js"></script>
     <script src="Main.js"></script>
-
-
 </body>
 
 </html>
