findPlant : spriteのxyを直接書き換えてはならない、move()を使う

--- a/p5_202209/index.html
+++ b/p5_202209/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 
-<body id="main-id">
+<body>
 
     <script src="Utl39.js"></script>
     <script src="Drawer.js"></script>
