--- a/p5_202209/index.html
+++ b/p5_202209/index.html
@@ -10,9 +10,10 @@
 
     <!-- Version 3 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script> -->
     <script src="https://p5play.org/v3/planck.min.js"></script>
-    <script src="https://p5play.org/v3/p5.play.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
+    
 
     <style>
         * {
