--- a/threejs/walk/index.html
+++ b/threejs/walk/index.html
@@ -34,6 +34,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
 
+        <script src="./CannonCameraController.js"></script>
         <script src="./main.js"></script>
     </body>
 </html>
