--- a/chatgpt/ecs_game/index.html
+++ b/chatgpt/ecs_game/index.html
@@ -10,6 +10,7 @@
   </style>
 </head>
 <body>
-  <script src="game.js"></script>
+  <!-- <script src="game.js"></script> -->
+  <script type="module" src="./dist/main.js"></script>
 </body>
 </html>
