--- a/chatgpt/ecs_game/index.html
+++ b/chatgpt/ecs_game/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <!-- <script src="game.js"></script> -->
-  <script type="module" src="./dist/main.js"></script>
+  <script src="./dist/bundle.js"></script>
 </body>
 </html>
