canvasScaler : 描写面積に対して単位を決定

--- a/chatgpt/ecs_game/index.html
+++ b/chatgpt/ecs_game/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <title>Simple Canvas Game</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     canvas {
-      border: 1px solid black;
+      display: block;
     }
   </style>
 </head>
